test/classes/initializers/errors/errHandling/throwsBecauseFieldTypeInitThrows.future
feature request: support initializers with throws in their body
#8692
